# small-powers-of-tau

./: Cargo.toml  LICENSE  readme.md
benches/: benchmark.rs
src/: accumulator.rs  ceremony.rs  interop_point_encoding.rs  interop_subgroup_checks.rs  keypair.rs  lib.rs  sdk.rs  serialisation.rs  shared_secret.rs  srs.rs  update_proof.rs
src/sdk/: contribution.rs  mod.rs  transcript.rs
