[package]
name = "small-powers-of-tau"
version = "0.1.0"
edition = "2021"
authors = ["Kevaundray Wedderburn"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand_core = { version = "0.6.3", features = ["getrandom"] }
rand_chacha = { version = "0.3.1" }
rand = { version = "0.8.4" }
rayon = { version = "1.0", optional = true }
itertools = "0.10.1"
ark-ec = { version = "0.3", default-features = false }
ark-ff = { version = "0.3.0", default-features = false }
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"
zeroize = { version = "1.5.7", features = ["zeroize_derive"] }
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0.85"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["parallel", "asm"]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "rayon", "ark-std/parallel"]
asm = ["ark-ff/asm"]
